# inbox

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  SPEC.md  TASTE.md  pyproject.toml  railway.toml
.claude/: CLAUDE.md
inbox/: __main__.py  app.py  auth.py  db.py  models.py  oauth_dep.py  server.py
inbox/routes/: oauth.py  pages.py  projects.py  tags.py  todos.py
inbox/templates/: done.html  login.html  setup.html
inbox/tools/: projects.py  tags.py  todos.py
tests/: conftest.py  test_api_projects.py  test_api_tags.py  test_api_todos.py  test_auth.py  test_projects.py  test_server.py  test_setup.py  test_tags.py  test_todos.py
