[project]
name = "inbox"
version = "0.1.0"
description = "MCP-native todo manager"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0",
    "aiosqlite>=0.20.0",
    "bcrypt>=4.2.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
inbox = "inbox.__main__:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "httpx>=0.28.0",
]
